Added other pages and linked to index page

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -170,7 +170,7 @@ input[type=submit] {
     padding: 10px 30px;
     font-weight: 300;
     text-decoration: none;
-    border-radius: 200px;
+    border-radius: 3px;
     -webkit-transition: background-color 0.3s, border 0.3s, color 0.3s;
     transition: background-color 0.3s, border 0.3s, color 0.3s;
 }
@@ -198,7 +198,9 @@ input[type=submit]:active {
 }
 
 .btn-full:hover,
-.btn-full:active {
+.btn-full:active,
+input[type=submit]:hover,
+input[type=submit]:active {
     border: 1px solid #E9242D;
 }
 
@@ -212,7 +214,7 @@ input[type=submit]:active {
 /* HEADER */
 /* ------------------------------------------------------------------------------- */
 
-header {
+.main-header {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0.7))), url(img/hero-min.jpg);
     background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(img/hero-min.jpg);
     background-size: cover;
